# wilink

./: .addcopyright  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  README  TODO  release  wilink.nsi.in  wilink.pri  wilink.pro
src/: CMakeLists.txt  application.cpp  application.h  application_mac.mm  chat.cpp  chat.h  chat_accounts.cpp  chat_accounts.h  chat_client.cpp  chat_client.h  chat_console.cpp  chat_console.h  chat_contacts.cpp  chat_contacts.h  chat_conversation.cpp  chat_conversation.h  chat_dialog.cpp  chat_dialog.h  chat_edit.cpp  chat_edit.h  chat_form.cpp  chat_form.h  chat_history.cpp  chat_history.h  chat_history_old.cpp  chat_mac.mm  chat_model.cpp  chat_model.h  chat_panel.cpp  chat_panel.h  chat_plugin.h  chat_preferences.cpp  chat_preferences.h  chat_room.cpp  chat_room.h  chat_rooms.cpp  chat_rooms.h  chat_roster.cpp  chat_roster.h  chat_roster_item.cpp  (+55 more)
src/app/: CMakeLists.txt  accounts.cpp  accounts.h  app.plist  app.pro  app.qrc  application.cpp  application.h  application_mac.mm  calls.cpp  client.cpp  client.h  conversations.cpp  declarative.cpp  declarative.h  diagnostics.h  fr.qm  fr.ts  history.cpp  icons.cpp  icons.h  main.cpp  model.cpp  model.h  network.cpp  network.h  news.cpp  notifications.cpp  notifications.h  notifications_growl.h  notifications_growl.mm  notifications_libnotify.cpp  notifications_libnotify.h  notifications_mac.mm  phone.cpp  photos.cpp  photos.h  places.cpp  player.cpp  qt_fr.qm  (+11 more)
src/app/phone/: sip.cpp  sip.h  sip_p.h  stun.cpp
src/data/: AboutDialog.qml  AccountAddPanel.qml  AccountListPanel.qml  AccountPasswordDialog.qml  AccountPreferencePanel.qml  Bubble.qml  Button.qml  CMakeLists.txt  CallNotification.qml  CallWidget.qml  ChatContactView.qml  ChatEdit.qml  ChatPanel.qml  ChatPlugin.qml  CheckBox.qml  Clipboard.qml  ComboBox.qml  ContactAddDialog.qml  ContactAddNotification.qml  ContactMenu.qml  ContactRemoveDialog.qml  ContactRenameDialog.qml  ContactView.qml  ConversationPanel.qml  CrumbBar.qml  DebugPlugin.qml  DiagnosticPanel.qml  DiagnosticPlugin.qml  DiagnosticsPanel.qml  Dialog.qml  DiscoveryPanel.qml  Dock.qml  DockButton.qml  ErrorNotification.qml  FolderQueueView.qml  GeneralPreferencePanel.qml  GroupBox.qml  Highlight.qml  HistoryView.qml  InputBar.qml  (+117 more)
src/data/16x16/: 16x16.qrc  tiny.qrc
src/data/32x32/: 32x32.qrc  tiny.qrc
src/data/64x64/: normal.qrc
src/data/qml/: AboutDialog.qml  AccountAddPanel.qml  AccountListPanel.qml  AccountPasswordDialog.qml  AccountPreferencePanel.qml  Bubble.qml  Button.qml  CallNotification.qml  CallWidget.qml  ChatCallWidget.qml  ChatContactView.qml  ChatEdit.qml  ChatPanel.qml  ChatPlugin.qml  ChatTabs.qml  ChatToolButton.qml  CheckBox.qml  Clipboard.qml  ComboBox.qml  ContactAddDialog.qml  ContactAddNotification.qml  ContactRemoveDialog.qml  ContactRenameDialog.qml  ContactSendSubscriptionDialog.qml  ContactView.qml  ConversationPanel.qml  CrumbBar.qml  DebugPlugin.qml  DiagnosticPanel.qml  DiagnosticPlugin.qml  Dialog.qml  Directory.qml  DirectoryXmlModel.qml  DiscoveryPanel.qml  Dock.qml  DockButton.qml  ErrorNotification.qml  FacebookTokenNotification.qml  FolderQueueView.qml  GeneralPreferencePanel.qml  (+91 more)
src/idle/: CMakeLists.txt  idle.cpp  idle.pri  idle.pro  idle_symbian.cpp
src/imports/: CMakeLists.txt  accounts.h  application.cpp  calls.cpp  calls.h  console.cpp  declarative.cpp  imports.pro  model.h  notifications.cpp  notifications.h  notifications_growl.mm  notifications_libnotify.cpp  notifications_libnotify.h  phone.cpp  photos.cpp  player.cpp  settings.cpp  shares.h  window.cpp
src/imports/QXmpp/: CMakeLists.txt  QXmpp.pro  plugin.cpp  plugin.h  qmldir
src/imports/phone/: sip.cpp  sip.h  sip_p.h
src/imports/wiLink/: CMakeLists.txt  accounts.cpp  accounts.h  calls.cpp  calls.h  client.cpp  client.h  console.cpp  console.h  conversations.cpp  conversations.h  declarative.cpp  declarative.h  declarative_qxmpp.h  diagnostics.cpp  diagnostics.h  discovery.cpp  discovery.h  history.cpp  history.h  icons.cpp  icons.h  menubar.cpp  menubar.h  model.cpp  model.h  notifications.cpp  notifications.h  notifications_growl.h  notifications_growl.mm  notifications_libnotify.cpp  notifications_libnotify.h  phone.cpp  phone.h  photos.cpp  photos.h  places.cpp  places.h  qmldir  rooms.cpp  (+17 more)
src/mobile/: config.h  flickcharm.cpp  main.cpp  mobile.pro  window.cpp  window.h
src/old/: NewsDialog.qml  history.h  phone.h  rooms.cpp  search.cpp  shares.cpp  shares.h
src/plugins/: CMakeLists.txt  accounts.cpp  accounts.h  application.cpp  application.h  application_mac.mm  calls.cpp  calls.h  chats.cpp  chats.h  client.cpp  client.h  config.h  console.cpp  console.h  contacts.cpp  contacts.h  conversations.cpp  conversations.h  declarative.cpp  declarative.h  diagnostics.cpp  diagnostics.h  discovery.cpp  discovery.h  folders.cpp  folders.h  history.cpp  history.h  main.cpp  menu.cpp  menu.h  model.cpp  model.h  news.cpp  news.h  phone.cpp  phone.h  photos.cpp  photos.h  (+27 more)
src/plugins/calls/: g711.cpp  g711.h
src/plugins/diagnostics/: interface.cpp  iq.cpp  iq.h  networkinfo.cpp  networkinfo.h  ping.cpp  ping.h  wireless.cpp  (+4 more)
src/qnetio/: .addcopyright  AUTHORS  CMakeLists.txt  Changelog  README  qnetio.pri  qnetio.pro
src/qsound/: CMakeLists.txt  QSoundFile.cpp  QSoundFile.h  QSoundMeter.cpp  QSoundMeter.h  QSoundPlayer.cpp  QSoundPlayer.h  QSoundStream.cpp  QSoundStream.h  QSoundTester.cpp  QSoundTester.h  QVideoGrabber.cpp  QVideoGrabber.h  QVideoGrabber_dummy.cpp  QVideoGrabber_linux.cpp  QVideoGrabber_mac.mm  QVideoGrabber_p.h  QVideoGrabber_win.cpp  QVideoGrabber_win.h  player.h  qsound.pri  qsound.pro
src/qxmpp-extra/: CMakeLists.txt
src/qxmppextra/: CMakeLists.txt  QXmppArchiveIq.cpp  QXmppArchiveIq.h  QXmppPingIq.cpp  QXmppPingIq.h
src/sound/: player.cpp
src/tests/: CMakeLists.txt  codec.cpp  grabber.cpp  grabber.h  hasher.cpp  pcap-player.c  phone.cpp  phone.h  rtp.cpp  rtp.h  sip.cpp  sip.h  stun.cpp  stun.h  tests.cpp  tests.h  tones.cpp  tones.h  tones.qrc
src/translations/: fr.ts  qt_fr.ts  translations.pro  translations.qrc.cmake
(+223 files in other folders)
