include(IconUtilities)
generate_icns(icns images/scalable/wiLink.svg)
generate_xpm(xpm images/scalable/wiLink.svg)

add_custom_target(icons DEPENDS ${icns} ${ico} ${xpm})
if (UNIX AND NOT APPLE)
install(FILES wiLink.desktop DESTINATION share/applications)
install(FILES images/32x32/wiLink.png DESTINATION share/icons/hicolor/32x32/apps)
install(FILES images/64x64/wiLink.png DESTINATION share/icons/hicolor/64x64/apps)
install(FILES images/128x128/wiLink.png DESTINATION share/icons/hicolor/128x128/apps)
install(FILES images/scalable/wiLink.svg DESTINATION share/icons/hicolor/scalable/apps)
install(FILES wiLink.xpm DESTINATION share/pixmaps)
endif()
